--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,4 +1,8 @@
-$primary-color: red;
-h1{
-    color: $primary-color;
+$colore:#2c2a2a;
+$boh:red;
+$black_background:#1c1c1c;
+$height_container:100px;
+a{
+    text-decoration: none;
+    
 }
