add: AppMainBlue - container with list

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,7 @@
 $colore:#2c2a2a;
 // $blu_active_border:#0280f6;
 $black_background:#1c1c1c;
+$blue_background:#0282f9;
 $height_container:100px;
 a{
     text-decoration: none;
