--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -20,3 +20,13 @@ body{
     justify-content: space-between;
     height: 100%;
 }
+.flex-column{
+    flex-direction: column;
+}
+.col-5{
+    text-align: left;
+    width: calc((100% / 12) * 5);
+}
+.col-4{
+    width: calc((100% / 12) * 4);
+}
