--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,7 +2,9 @@ $colore:#2c2a2a;
 // $blu_active_border:#0280f6;
 $black_background:#1c1c1c;
 $blue_background:#0282f9;
+$blue_border_button:#0975d9;
 $grey_text_link:#6a7472;
+$grey_background_color:#303030;
 $height_container:100px;
 a{
     text-decoration: none;
