--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -4,6 +4,15 @@
 body{
     background-color: #222222;
     font-family: 'Core Sans A', sans-serif;
+    font-weight: lighter;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    color: white;
 }
 // main container
 .main-container{
@@ -21,12 +30,19 @@ body{
     justify-content: space-between;
     height: 100%;
 }
+.center{
+    justify-content: center;
+}
 .flex-column{
     flex-direction: column;
 }
 .col-5{
     text-align: left;
     width: calc((100% / 12) * 5);
+}
+.col-2{
+    padding: 10px;
+    width: calc((100% / 12) * 2);
 }
 .col-4{
     width: calc((100% / 12) * 4);
