--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,10 +1,10 @@
 @use './partials/variables' as *;
-@import url('https://fonts.cdnfonts.com/css/core-sans-a');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 // body
 body{
     background-color: #222222;
-    font-family: 'Core Sans A', sans-serif;
-    font-weight: lighter;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 h1,
 h2,
